---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-08-31
  Bugfixes:
    - Fixed that Clones on space platforms would end up outside the hub when switching into them. (This fix should be backwards-compatible.)
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-04-19
  Bugfixes:
    - Fixed a crash related to cursor stacks.
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-04-03
  Info:
    - Added Space Age tag.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-03-28
  Bugfixes:
    - Fixed the cropping of the technology icon.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-03-26
  Changes:
    - Description updated.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-03-25
  Bugfixes:
    - Fixed cases of cycling between characters failing due to character death.
    - Fixed cases of cycling between characters failing due to character entering space platforms.
  Changes:
    - Added keybinding to cycle through characters in reverse, bound by default to CTRL + SHIFT + TAB.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-03-24
  Changes:
    - Custom thumbnail, tech and recipe icons (thanks snouz!)
    - Keybinding changed to CTRL + TAB.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-03-23
  Changes:
    - Description updated.